// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PhoneNumbersLimitAlert/> render() should not be displayed if the limit is not reached 1`] = `null`;

exports[`<PhoneNumbersLimitAlert/> render() should notify that the limit has been reached 1`] = `
<div
  class="alert error mt-3"
>
  <div
    class="iconContainer"
  >
    <img
      alt="icon"
      src="test-file-stub"
    />
  </div>
  <div
    class="content"
  >
    <span
      class="label"
    >
      <span
        class="d-flex align-items-center"
      >
        You have reached 
        5
        /
        5
         phone numbers. To add more, you must
        <a
          class="ml-1 mr-1"
          to="/app/settings/billing/plans"
        >
          upgrade
        </a>
        to a higher plan.
      </span>
    </span>
  </div>
</div>
`;

exports[`<PhoneNumbersLimitAlert/> render() should warn when the limit is about to be reached 1`] = `
<div
  class="alert warning mt-3"
>
  <div
    class="iconContainer"
  >
    <img
      alt="icon"
      src="test-file-stub"
    />
  </div>
  <div
    class="content"
  >
    <span
      class="label"
    >
      <span
        class="d-flex align-items-center"
      >
        You have reached 
        4
        /
        5
         phone numbers. To add more, you must
        <a
          class="ml-1 mr-1"
          to="/app/settings/billing/plans"
        >
          upgrade
        </a>
        to a higher plan.
      </span>
    </span>
  </div>
</div>
`;
